--- a/src/main/resources/campo_minato.fxml
+++ b/src/main/resources/campo_minato.fxml
@@ -13,7 +13,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #3c3f41;" stylesheets="@style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CampoMinato.View.CampoMinatoController">
    <center>
-      <BorderPane prefHeight="460.0" prefWidth="340.0" style="-fx-background-color: #1e1f22; -fx-background-radius: 10;" BorderPane.alignment="CENTER">
+      <BorderPane style="-fx-background-color: #1e1f22; -fx-background-radius: 10;" BorderPane.alignment="CENTER">
          <BorderPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </BorderPane.margin>
@@ -39,7 +39,7 @@
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
-         <left>
+         <center>
             <GridPane fx:id="game_grid" alignment="CENTER" styleClass="grid" BorderPane.alignment="CENTER">
               <columnConstraints>
                 <ColumnConstraints hgrow="NEVER" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="30.0" />
@@ -66,7 +66,7 @@
                   <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
               </rowConstraints>
             </GridPane>
-         </left>
+         </center>
       </BorderPane>
    </center>
 </BorderPane>
