--- a/src/main/resources/campo_minato.fxml
+++ b/src/main/resources/campo_minato.fxml
@@ -18,23 +18,21 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </BorderPane.margin>
          <bottom>
-            <HBox alignment="CENTER" fillHeight="false" prefHeight="60.0" spacing="10.0" BorderPane.alignment="CENTER">
-               <children>
-                  <Button fx:id="save_game" focusTraversable="false" mnemonicParsing="false" text="Save" />
-                  <Separator orientation="VERTICAL" style="-: blue;" />
-                  <Button fx:id="load_game" focusTraversable="false" mnemonicParsing="false" text="Load" />
-                  <Separator orientation="VERTICAL" />
-                  <Button fx:id="new_game" focusTraversable="false" mnemonicParsing="false" text="New game" />
-               </children>
-            </HBox>
+             <HBox alignment="CENTER" fillHeight="false" prefHeight="60.0" spacing="10.0" BorderPane.alignment="CENTER">
+                 <Button fx:id="save_game" focusTraversable="false" mnemonicParsing="false" text="Save"/>
+                 <Separator orientation="VERTICAL"/>
+                 <Button fx:id="load_game" focusTraversable="false" mnemonicParsing="false" text="Load"/>
+                 <Separator orientation="VERTICAL"/>
+                 <Button fx:id="new_game" focusTraversable="false" mnemonicParsing="false" text="New game"/>
+             </HBox>
          </bottom>
          <top>
-            <HBox alignment="CENTER" fillHeight="false" prefHeight="60.0" prefWidth="0.0" BorderPane.alignment="CENTER">
-               <children>
-                  <Label fx:id="score_label" text="ciao" textFill="#d4d4d4" />
-                  <ImageView fx:id="status_image" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" />
-               </children>
-            </HBox>
+             <HBox alignment="CENTER" fillHeight="false" prefHeight="60.0" prefWidth="0.0"
+                   BorderPane.alignment="CENTER">
+                 <Label fx:id="score_label" text="ciao" textFill="#d4d4d4"/>
+                 <ImageView fx:id="status_image" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true"
+                            preserveRatio="true"/>
+             </HBox>
          </top>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
