--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -1,8 +1,12 @@
+@import "scroll-box.css";
+
 .root {
     -fx-font-family: CCVictorySpeechW00-Regular;
     -fu-my-white: #d4d4d4;
     -fu-my-grey: #9c9c9c;
     -fu-my-red: #a10000;
+    -fu-background: #2b2b30;
+    -fu-barra: #c3c3c3;
 }
 
 .button {
@@ -52,7 +56,7 @@
     -fx-text-fill: orange;
 }
 
-.grid .button:danger {
+.grid .button:very_warning {
     -fx-background-color: #212125;
     -fx-text-fill: red;
 }
@@ -98,5 +102,29 @@
 }
 
 .menu-item {
+    -fx-background-color: transparent;
+}
+
+.scroll-pane {
+    -fx-background-color: -fu-background;
+    -fx-background-radius: 6;
+    -fx-border-color: -fu-my-red;
+    -fx-border-radius: 6;
+    -fx-border-width: 0;
+}
+
+.scroll-pane > .corner {
+    -fx-background-color: transparent;
+}
+
+.scroll-pane {
+    -fx-background-color: -fu-background;
+    -fx-background-radius: 6;
+    -fx-border-color: -fu-my-red;
+    -fx-border-radius: 6;
+    -fx-border-width: 2;
+}
+
+.scroll-pane > .viewport {
     -fx-background-color: transparent;
 }
